deployment_yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: node-js
  name: node-js
  namespace: app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: node-js
  type: ClusterIP
status:
  loadBalancer: {}
